Fixed blog those who does not use javascript
    Now the blog is usable by those who doesn't use javascript. Why?
Because before I was using javascript to fade in the content which was
previously hidden by a css rule.

--- a/res/css/blog.css
+++ b/res/css/blog.css
@@ -41,6 +41,7 @@ footer {
   color: rgba(236, 240, 241, 1);
   margin-top: 100px;
   position: absolute;
+  height: 225px;
   width: 100%;
   padding: 10px;
 }
@@ -207,7 +208,7 @@ footer a:hover {
 }
 
 .alert {
-  padding: 1%;
+  padding: 10px;
   color: white;
   cursor: default;
   border-radius: 2px;
@@ -238,8 +239,4 @@ footer a:hover {
 
 .alert-warning {
   background: rgba(241, 196, 15,1.0);
-}
-
-#content {
-  display: none;
 }
